# yai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  appspec.yml  buildspec.yml  docker-compose.yml  manage.py  pyproject.toml  setup.py
.github/workflows/: artifact-release.yml  image-build.yml
booking/: urls.py  views.py
scripts/: entrypoint  install_dependencies.sh  start_server.sh  stop_server.sh  yai.service
toolkit/: build
yai/: asgi.py  settings.py  urls.py  wsgi.py
yai_daily/: apps.py  urls.py  views.py
yai_daily/templates/yai/daily/: message.html  partial.html
yai_ext/: yAi.cpp  yAi.hpp  yai-chat-abi.cc
yai_frame/: apps.py  forms.py  urls.py  views.py
yai_frame/templates/yai/frame/: chat.html  item.html
yai_front/: apps.py  urls.py  views.py
yai_front/templates/yai/front/: dashboard.html
yai_signin/: urls.py  views.py
yai_signin/templates/yai/signin/: dashboard.html
